# garagem-beatriz

./: db.sqlite3  pyproject.toml
core/: serializers.py  views.py
core/migrations/: 0001_initial.py  0002_marca.py  0003_remove_marca_site_alter_categoria_descricao_and_more.py
garagem/: settings.py  urls.py
